@@ -258,7 +258,7 @@
           "CCI-000764",
           "CCI-000770"
         ],
-        "value": "yes"
+        "value": true
       },
       "autofs::ldap_auth::authtype": {
         "identifiers": [
@@ -275,7 +275,7 @@
           "SRG-OS-000250-GPOS-00093",
           "CCI-001453"
         ],
-        "value": "yes"
+        "value": true
       },
       "autofs::ldap_auth::usetls": {
         "identifiers": [
@@ -283,7 +283,7 @@
           "SRG-OS-000250-GPOS-00093",
           "CCI-001453"
         ],
-        "value": "yes"
+        "value": true
       },
       "autofs::ldap_auth_conf_file": {
         "identifiers": [
@@ -525,7 +525,7 @@
           "SRG-OS-000072-GPOS-00040",
           "CCI-000195"
         ],
-        "value": 2
+        "value": 4
       },
       "pam::cracklib_maxrepeat": {
         "identifiers": [
